# cookiecutter-ocaml

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: default.nix  dune-project  flake.nix  readme.org  {{ cookiecutter.project_slug }}.opam
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/source/: dune  main.ml
